hasura/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hasura
    hasuraService: custom
  name: hasura
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hasura
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hasura
    spec:
      containers:
        - image: hasura/graphql-engine:v1.1.0
          imagePullPolicy: IfNotPresent
          name: hasura
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
