hasura/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hasura
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # certmanager.k8s.io/issuer: "letsencrypt-staging"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - ""
      secretName: -tls
  rules:
    - host: ""
      http:
        paths:
          - path: /
            backend:
              serviceName: hasura
              servicePort: 80
